--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1 class="text-center">Introducción a Formularios</h1>
     <div class="container">
-      <form action="">
+      <form action="" name="formulario"  netlify>
         <div class="form-group">
           <label for="exampleFormControlInput1">Email address</label>
           <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
